fix: logo path for subpages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_url: https://enniodossantos.github.io/
 theme:
   name: material
   language: pt-BR
-  logo: claw-marks.svg
+  logo: /claw-marks.svg
   features:
     - navigation.tabs
     - navigation.sections
